--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ baseurl: /
 github:
   username: jeremiahvolkmer 
 
-twitter:
-  username: username
+linkedin:
+  username: jeremiah-volkmer-688526164 
